--- a/SH_Supervised_ML_Classification_Cardiovascular_Risk_Prediction.ipynb
+++ b/SH_Supervised_ML_Classification_Cardiovascular_Risk_Prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SH-Supervised_ML_Classification_Cardiovascular_Risk_Prediction",
       "provenance": [],
-      "authorship_tag": "ABX9TyMPxg06NDj0D3MRLs09OKqJ",
+      "authorship_tag": "ABX9TyNKLUgmDTWYXSbaGNHc39V0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1724,12 +1724,12 @@
         "        'Risk of 10-Year CHD','Categoric Independent Variable','Count','Count of categorical independent variables with dependent variable',xticks_lsts)"
       ],
       "metadata": {
-        "id": "0rXw3Iq9Rf90",
-        "outputId": "defca5bf-c10a-473c-d995-5d10f33de315",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 522
-        }
+        },
+        "id": "0rXw3Iq9Rf90",
+        "outputId": "defca5bf-c10a-473c-d995-5d10f33de315"
       },
       "execution_count": 32,
       "outputs": [
@@ -1758,12 +1758,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "-EFhQOuxRjPY",
-        "outputId": "f56d5c98-e206-44b5-ee96-f3df2f672216",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 676
-        }
+        },
+        "id": "-EFhQOuxRjPY",
+        "outputId": "f56d5c98-e206-44b5-ee96-f3df2f672216"
       },
       "execution_count": 33,
       "outputs": [
@@ -1805,12 +1805,12 @@
         "calc_vif(df[[i for i in df.describe().columns if i not in ['id','TenYearCHD']]])"
       ],
       "metadata": {
-        "id": "BbFo6WQVRoKx",
-        "outputId": "7f5b1249-3fcf-49a8-d74d-0ccba66907a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 520
-        }
+        },
+        "id": "BbFo6WQVRoKx",
+        "outputId": "7f5b1249-3fcf-49a8-d74d-0ccba66907a2"
       },
       "execution_count": 35,
       "outputs": [
@@ -2037,11 +2037,11 @@
         "print('Dependent variables   : ',dependent_variable)"
       ],
       "metadata": {
-        "id": "Qjf4B2oPRoIP",
-        "outputId": "577361f4-91f5-434f-a141-b794688c4dd6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Qjf4B2oPRoIP",
+        "outputId": "577361f4-91f5-434f-a141-b794688c4dd6"
       },
       "execution_count": 36,
       "outputs": [
@@ -2058,23 +2058,183 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Train test split\n",
+        "X = df[independent_variables].values\n",
+        "y = df[dependent_variable].values\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 0)\n",
+        "print('X_train :',X_train.shape)\n",
+        "print('X_test  :',X_test.shape)\n",
+        "print('y_train :',y_train.shape)\n",
+        "print('y_test  :',y_test.shape)"
       ],
       "metadata": {
-        "id": "1S5IzlMNRoFq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1S5IzlMNRoFq",
+        "outputId": "371e1193-1f5e-46e2-d40c-5c4b1fe4f7e3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X_train : (2523, 15)\n",
+            "X_test  : (842, 15)\n",
+            "y_train : (2523, 1)\n",
+            "y_test  : (842, 1)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Transforming data\n",
+        "\n",
+        "# Standardization\n",
+        "scaler = MinMaxScaler()\n",
+        "X_train = scaler.fit_transform(X_train)\n",
+        "X_test= scaler.transform(X_test)"
       ],
       "metadata": {
         "id": "jNDcWAKgRoDE"
       },
-      "execution_count": null,
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Logistic Regression\n",
+        "# Creating an instance of Logistic Regression\n",
+        "logistic = LogisticRegression(fit_intercept = True)\n",
+        "\n",
+        "# Hyperparameters\n",
+        "grid = {'C':10.0**np.arange(-2,3),'penalty':['l1','l2']}\n",
+        "\n",
+        "# KFold\n",
+        "cv = KFold(n_splits = 5, random_state = None, shuffle = False)\n",
+        "\n",
+        "# Grid Search\n",
+        "clf = GridSearchCV(logistic,grid,cv = cv,n_jobs = -1,scoring = 'f1_macro')"
+      ],
+      "metadata": {
+        "id": "cYUSA83YRoAj"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Model fit\n",
+        "clf.fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kUx6dsjNRn-R",
+        "outputId": "3b9ede52-78ca-4f08-ca9b-2e04dd93188e"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "GridSearchCV(cv=KFold(n_splits=5, random_state=None, shuffle=False),\n",
+              "             estimator=LogisticRegression(), n_jobs=-1,\n",
+              "             param_grid={'C': array([1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02]),\n",
+              "                         'penalty': ['l1', 'l2']},\n",
+              "             scoring='f1_macro')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the predicted probabilities\n",
+        "train_proba_preds = clf.predict_proba(X_train)[:,1]\n",
+        "test_proba_preds = clf.predict_proba(X_test)[:,1]"
+      ],
+      "metadata": {
+        "id": "rK7P-V66SCtJ"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the predicted classes\n",
+        "train_class_preds = clf.predict(X_train)\n",
+        "test_class_preds = clf.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "Fk8YjijsSCqg"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Function for Accuracy scores\n",
+        "def accuracy_scoress(actual_train,predicted_train,actual_test,predicted_test):\n",
+        "  train_accuracy = (accuracy_score(actual_train,predicted_train))*100\n",
+        "  test_accuracy = (accuracy_score(actual_test,predicted_test))*100\n",
+        "\n",
+        "  print(\"The accuracy on train data is :\", round(train_accuracy,5))\n",
+        "  print(\"The accuracy on test data is  :\", round(test_accuracy,5))"
+      ],
+      "metadata": {
+        "id": "fkZmihUTSCoB"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the accuracy scores\n",
+        "accuracy_scoress(y_train,train_class_preds,y_test,test_class_preds)"
+      ],
+      "metadata": {
+        "id": "HYryd0FESCl3",
+        "outputId": "58e0a931-aa17-4d51-b44c-7b46c97025ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The accuracy on train data is : 85.73127\n",
+            "The accuracy on test data is  : 85.03563\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Here the accuracy score may be good. But for the imbalanced dataset ROC AUC score would be the appropriate metric"
+      ],
+      "metadata": {
+        "id": "5JhVCVheSCjx"
+      },
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -2083,7 +2243,7 @@
         ""
       ],
       "metadata": {
-        "id": "cYUSA83YRoAj"
+        "id": "Lr314qbbSOJw"
       },
       "execution_count": null,
       "outputs": []
@@ -2094,7 +2254,51 @@
         ""
       ],
       "metadata": {
-        "id": "kUx6dsjNRn-R"
+        "id": "LWam-x0oSOHG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "a60j3130SOFC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "pQLMFELqSOCm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "SELPxHZdSOAI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "sKGLQlliSChY"
       },
       "execution_count": null,
       "outputs": []
